--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-site-verification" content="ETU9XFtaP_7Y2hFAPme3h-Mq66SdVpx2E4WPD5YM38w" />
   <title>Lekkala Dharmika |Portfolio</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <style>
@@ -238,3 +239,4 @@
 </script>
 </body>
 </html>
+
